# nvx-toggle

./: .gitignore  CMakeLists.txt  actionIDs.h  actionhelper.cpp  actionhelper.h  main.cpp  nvx-toggle.pro  org.kde.nvxtoggle.actions  trayicon.cpp  trayicon.h  window.cpp  window.h
